src/objects/Income_And_Expense_Type__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>PAYG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Click_Loans_Bank_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lender</label>
        <referenceTo>acfBank_Detail__c</referenceTo>
        <relationshipLabel>Income And Expense Types</relationshipLabel>
        <relationshipName>Income_And_Expense_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_And_Expense_Detail__c</fullName>
        <label>Income And Expense Detail</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Income And Expense Types</relationshipLabel>
        <relationshipName>Income_And_Expense_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recogition_Amount__c</fullName>
        <label>Recogition Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recogition_Field__c</fullName>
        <label>Recogition Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recogition_Method__c</fullName>
        <label>Recogition Method</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage of Loan Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Repayments</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit ID</label>
        <type>Text</type>
    </fields>
    <label>Income And Expense Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Income_And_Expense_Detail__c</columns>
        <columns>Click_Loans_Bank_Detail__c</columns>
        <columns>Product__c</columns>
        <columns>Recogition_Amount__c</columns>
        <columns>Recogition_Field__c</columns>
        <columns>Recogition_Method__c</columns>
        <columns>Tax_Applicable__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Income And Expense Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income And Expense Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>